--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 langague: java
+sudo: false # faster builds
 
 jdk: openjdk8
 
-script: mvn clean verify
+script:  
+ - mvn clean package
+ - mvn cobertura:cobertura
        
 after_success:
   - bash <(curl -s https://codecov.io/bash)
