--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,22 @@
                    <configuration>
                            <mainClass>fr.devops.dataframe.Dataframe</mainClass>
                    </configuration>
-           </plugin>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            
         </plugins>
      </build>
 </project>
