--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 		<artifactId>opencsv</artifactId>
 		<version>3.8</version>
 	</dependency>
+        <dependency>
+            <groupId>de.vandermeer</groupId>
+            <artifactId>asciitable</artifactId>
+            <version>0.3.2</version>
+        </dependency>
      </dependencies>
      
      <build>
