--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ jdk: openjdk8
  # - docker
 
 script:  
- - mvn clean verify
- #- mvn cobertura:cobertura
+ - mvn clean package
+ - mvn cobertura:cobertura
  #- docker build -t dataframe
        
 after_success:
