--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,6 @@ jdk: openjdk8
 services:
  - docker
 
- env:
-  global:
-    - IMAGE_NAME=DevOpsDataframe
-    - REGISTRY_NAME=chouaibmo
-
 script:  
  - mvn clean package
  - mvn cobertura:cobertura
@@ -17,10 +12,10 @@ script:
        
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-  - docker build -t $(IMAGE_NAME):latest .
-  - docker run -it --rm $(IMAGE_NAME):latest
+  - docker build -t dataframe:latest .
+  - docker run -it --rm dataframe
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker tag $(IMAGE_NAME) $(REGISTRY_NAME)/$(IMAGE_NAME):latest
-  - docker push $(REGISTRY_NAME)/$(IMAGE_NAME):latest
+  - docker tag dataframe chouaibmo/dataframe:latest
+  - docker push chouaibmo/dataframe:latest
 
 
