--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ script:
  
        
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - curl --data-binary @codecov.yml https://codecov.io/validate
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t dataframe:latest .
   - docker tag dataframe chouaibmo/dataframe:latest
   - docker push chouaibmo/dataframe:latest
 
